# hackathon-web3-2022

./: .gitignore  README.md  package-lock.json
contract/: Cargo.toml  README.md
contract/io/src/: lib.rs
contract/src/: lib.rs
contract/tests/: test.rs
dev/: .env.example  generateEnv.js  package-lock.json  package.json
domain-template/: Cargo.toml  README.md
domain-template/src/: io.rs  lib.rs
example-contracts/dns-scaffold/src/: io.rs  lib.rs
example-contracts/fungible-token/io/: Cargo.toml
example-contracts/fungible-token/src/: lib.rs
example-contracts/game-of-chance/src/: io.rs  lib.rs
example-contracts/hello-dns/: index.html
example-contracts/hello-dns/src/: lib.rs
example-contracts/hello-world-dns/: index.html
example-contracts/hello-world-dns/src/: lib.rs
example-contracts/hello-world/src/: lib.rs
example-contracts/hello-world/tests/: hello_world_test.rs
example-contracts/ping-pong/: Cargo.toml
example-contracts/ping-pong/src/: io.rs  lib.rs
frontend/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.scss  App.tsx  consts.ts  index.tsx  types.ts
frontend/src/api/: initApi.ts
frontend/src/assets/: dns.meta.wasm  metaBuffer.ts
frontend/src/components/: Account.tsx  AccountButton.tsx  Accounts.tsx  AccountsModal.tsx  ApiLoader.tsx  Button.tsx  CardContract.tsx  Copyright.tsx  Footer.tsx  Header.tsx  Input.tsx  Logo.tsx  Select.tsx  Socials.tsx  Wallet.tsx
frontend/src/context/: ApiContext.tsx
frontend/src/hooks/: GearProvider.tsx  dns.meta.wasm  (+5 more)
(+13 files in other folders)
